--- a/Core/View/Master/ListView.html.twig
+++ b/Core/View/Master/ListView.html.twig
@@ -343,7 +343,7 @@
                         aria-expanded="false">
                     <i class="fas fa-fill-drip fa-fw" aria-hidden="true"></i>
                 </button>
-                <div class="dropdown-menu dropdown-menu-right pb-0">
+                <div class="dropdown-menu dropdown-menu-end pb-0">
                     <h6 class="dropdown-header">
                         {{ trans('colors') }}
                     </h6>
@@ -405,7 +405,7 @@
                 <span class="d-none d-lg-inline">{{ currentView.orderOptions[currentView.orderKey]['label'] }}</span>
                 <span class="caret"></span>
             </button>
-            <div class="dropdown-menu dropdown-menu-right">
+            <div class="dropdown-menu dropdown-menu-end">
                 {% for key, orderby in currentView.orderOptions %}
                     {% set activeClass = (currentView.orderKey == key) ? ' active' : '' %}
                     {% set icon = (orderby.type == 'ASC') ? 'fa-solid fa-angles-up' : 'fa-solid fa-angles-down' %}
