--- a/Core/View/Installer/Install.html.twig
+++ b/Core/View/Installer/Install.html.twig
@@ -43,18 +43,20 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="" onclick="location.reload();">
-        <img src="Core/Assets/Images/logo.png" width="30" height="30" class="align-top" alt="FacturaScripts"/>
-        FacturaScripts {{ version }}
-    </a>
-    <ul class="nav navbar-nav mr-auto"></ul>
-    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-        <li class="nav-item">
-            <a class="nav-link" href="?phpinfo=TRUE">
-                <i class="fas fa-info-circle fa-fw" aria-hidden="true"></i> phpinfo
-            </a>
-        </li>
-    </ul>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="" onclick="location.reload();">
+            <img src="Core/Assets/Images/logo.png" width="30" height="30" class="align-top" alt="FacturaScripts"/>
+            FacturaScripts {{ version }}
+        </a>
+        <ul class="nav navbar-nav mr-auto"></ul>
+        <ul class="navbar-nav flex-row me-md-auto d-none d-md-flex">
+            <li class="nav-item">
+                <a class="nav-link" href="?phpinfo=TRUE">
+                    <i class="fas fa-info-circle fa-fw" aria-hidden="true"></i> phpinfo
+                </a>
+            </li>
+        </ul>
+    </div>
 </nav>
 <div class="container-fluid">
     <div class="row">
@@ -243,25 +245,29 @@
                 </div>
             </div>
             <br/>
-            <div class="card-deck">
-                <div class="card shadow mb-3">
-                    <div class="card-body text-center">
-                        <i class="fa-solid fa-book fa-3x text-primary"></i>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-block btn-lg btn-link" href="https://facturascripts.com/ayuda" rel="nofollow"
-                           target="_blank">{{ trans('help') }}
-                        </a>
+            <div class="row row-cols-2">
+                <div class="col">
+                    <div class="card shadow mb-3">
+                        <div class="card-body text-center">
+                            <i class="fa-solid fa-book fa-3x text-primary"></i>
+                        </div>
+                        <div class="card-footer d-grid">
+                            <a class="btn btn-lg btn-link" href="https://facturascripts.com/ayuda" rel="nofollow"
+                               target="_blank">{{ trans('help') }}
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="card shadow mb-3">
-                    <div class="card-body text-center">
-                        <i class="fa-solid fa-comment-dots fa-3x text-info"></i>
-                    </div>
-                    <div class="card-footer">
-                        <a class="btn btn-block btn-lg btn-link" href="https://facturascripts.com/contacto"
-                           rel="nofollow" target="_blank">{{ trans('support') }}
-                        </a>
+                <div class="col">
+                    <div class="card shadow mb-3">
+                        <div class="card-body text-center">
+                            <i class="fa-solid fa-comment-dots fa-3x text-info"></i>
+                        </div>
+                        <div class="card-footer d-grid">
+                            <a class="btn btn-lg btn-link" href="https://facturascripts.com/contacto"
+                               rel="nofollow" target="_blank">{{ trans('support') }}
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
