--- a/Core/View/Master/EditListViewInLine.html.twig
+++ b/Core/View/Master/EditListViewInLine.html.twig
@@ -85,7 +85,7 @@
             <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
             <input type="hidden" name="code" value="{{ model.primaryColumnValue() }}"/>
             <div class="card shadow mb-2"{% if currentView.selected == model.primaryColumnValue() %} id="EditListViewSelected"{% endif %}>
-                <div class="row align-items-end">
+                <div class="row align-items-end px-2">
                     <div class="col pt-2">
                         {% for group in currentView.getColumns() %}
                             {{ group.edit(model) | raw }}
