--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -88,6 +88,7 @@
     {% endfor %}
     {% block navbar %}
         <nav class="navbar navbar-expand navbar-dark bg-primary sticky-top d-print-none">
+            <div class="container-fluid">
             {% block navbarContent %}
                 <a class="navbar-brand d-none d-sm-inline" href="{{ asset(fsc.user.homepage) }}" title="{{ trans('homepage') }}">
                     <img src="{{ asset('Dinamic/Assets/Images/logo-white.png') }}" width="30" height="30"
@@ -101,7 +102,7 @@
                             {{ macros.showMenu(menuItem) }}
                         {% endfor %}
                     </ul>
-                    <ul class="navbar-nav flex-row ml-auto">
+                    <ul class="navbar-nav flex-row ms-auto">
                         {% block navbarMenuIcon %}
                             {% for item in getIncludeViews('MenuTemplate', 'MenuIconBefore') %}
                                 {% include item['path'] %}
@@ -124,7 +125,7 @@
                                    title="{{ trans('user') }}">
                                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
                                 </a>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
+                                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="user-list">
                                     <a class="dropdown-item" href="{{ fsc.user.url() }}">
                                         <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
                                     </a>
@@ -148,6 +149,7 @@
                     </ul>
                 </div>
             {% endblock %}
+            </div>
         </nav>
     {% endblock %}
     <div class="pt-3">
