--- a/Core/View/Master/MicroTemplate.html.twig
+++ b/Core/View/Master/MicroTemplate.html.twig
@@ -38,6 +38,11 @@
         {% block css %}
             <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.min.css') }}" />
             <link rel="stylesheet" href="{{ asset('node_modules/@fortawesome/fontawesome-free/css/all.min.css') }}"/>
+            <style>
+                .btn-link {
+                    text-decoration: none;
+                }
+            </style>
         {% endblock %}
         {# Adds custom CSS assets #}
         {% for css in assetManager.get('css') %}
