--- a/Core/View/Tab/RefundFacturaProveedor.html.twig
+++ b/Core/View/Tab/RefundFacturaProveedor.html.twig
@@ -139,7 +139,7 @@
                                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <i class="fas fa-check-square fa-fw"></i> {{ trans('select') }}
                                         </button>
-                                        <div class="dropdown-menu dropdown-menu-right">
+                                        <div class="dropdown-menu dropdown-menu-end">
                                             <a class="dropdown-item" href="#" onClick="return refundNone();">
                                                 <i class="far fa-square fa-fw"></i> {{ trans('select-none') }}
                                             </a>
