--- a/Core/View/Updater.html.twig
+++ b/Core/View/Updater.html.twig
@@ -41,7 +41,7 @@
             <div class="col-sm-6">
                 <div class="btn-group">
                     <a href="{{ asset('AdminPlugins') }}" class="btn btn-sm btn-secondary">
-                        <i class="fas fa-arrow-left fa-fw" aria-hidden="true"></i>
+                        <i class="fas fa-arrow-start fa-fw" aria-hidden="true"></i>
                         <span class="d-none d-md-inline-block">{{ trans('plugins') }} </span>
                     </a>
                     <a href="{{ fsc.url() }}" class="btn btn-sm btn-secondary" title="{{ trans('refresh') }}">
@@ -205,7 +205,7 @@
                                             data-bs-toggle="dropdown" aria-expanded="false">
                                         <span class="sr-only">{{ trans('options') }}</span>
                                     </button>
-                                    <div class="dropdown-menu dropdown-menu-right">
+                                    <div class="dropdown-menu dropdown-menu-end">
                                         <a href="{{ fsc.url() }}?action=download&item={{ item.id }}"
                                            class="btn btn-warning" onclick="animateSpinner('add')">{{ trans('do-not-disable-plugins') }}
                                         </a>
