--- a/Core/View/Installer/Install.html.twig
+++ b/Core/View/Installer/Install.html.twig
@@ -49,7 +49,7 @@
             FacturaScripts {{ version }}
         </a>
         <ul class="nav navbar-nav mr-auto"></ul>
-        <ul class="navbar-nav flex-row me-md-auto d-none d-md-flex">
+        <ul class="navbar-nav flex-row ms-md-auto d-none d-md-flex">
             <li class="nav-item">
                 <a class="nav-link" href="?phpinfo=TRUE">
                     <i class="fas fa-info-circle fa-fw" aria-hidden="true"></i> phpinfo
