--- a/Core/View/Macro/Toasts.html.twig
+++ b/Core/View/Macro/Toasts.html.twig
@@ -65,7 +65,7 @@
         let html = '<div class="toast toast-' + style + ' ' + styleBorder + '" style="margin: 15px auto 0 auto;" role="' + role + '" aria-live="' + live + '" aria-atomic="true" ' + delay + '>'
             + '<div class="toast-header ' + styleHeader + '">'
             + '<strong class="mr-auto">' + icon + title + '</strong>'
-            + '<button type="button" class="ms-4 btn close ' + styleHeader + '" data-bs-dismiss="toast" aria-label="{{ trans('close') }}">'
+            + '<button type="button" class="ms-4 btn btn-close ' + styleHeader + '" data-bs-dismiss="toast" aria-label="{{ trans('close') }}">'
             + ''
             + '</button>'
             + '</div>';
