--- a/Core/View/Installer/Install.html.twig
+++ b/Core/View/Installer/Install.html.twig
@@ -99,13 +99,13 @@
                         <ul class="nav nav-tabs card-header-tabs" role="tablist">
                             <li role="presentation" class="nav-item">
                                 <a class="nav-link active" href="#preferencias" aria-controls="preferencias" role="tab"
-                                   data-toggle="tab">
+                                   data-bs-toggle="tab">
                                     <i class="fas fa-cogs" aria-hidden="true"></i>&nbsp; {{ trans('preferences') }}
                                 </a>
                             </li>
                             <li role="presentation" class="nav-item">
                                 <a class="nav-link" href="#licencia" aria-controls="licencia" role="tab"
-                                   data-toggle="tab">
+                                   data-bs-toggle="tab">
                                     <i class="far fa-file-alt"></i>&nbsp; {{ trans('license') }}
                                 </a>
                             </li>
@@ -116,7 +116,7 @@
                             <div role="tabpanel" class="tab-pane active" id="preferencias">
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('language') }}:
                                             <div class="input-group">
                                                 <span class="input-group-prepend">
@@ -139,7 +139,7 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('timezone') }}:
                                             <div class="input-group">
                                                 <span class="input-group-prepend">
@@ -156,7 +156,7 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-type') }}:
                                             <select id="db_type" name="fs_db_type" class="form-control">
                                                 {% if fsc.db_type == 'mysql' %}
@@ -170,21 +170,21 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-host') }}:
                                             <input type="text" name="fs_db_host" value="{{ fsc.db_host }}"
                                                    class="form-control" required/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-port') }}:
                                             <input type="number" id="db_port" name="fs_db_port"
                                                    value="{{ fsc.db_port }}" class="form-control" required/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-name') }}:
                                             <div class="input-group">
                                                 <span class="input-group-prepend">
@@ -198,14 +198,14 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-user') }}:
                                             <input type="text" id="db_user" name="fs_db_user" value="{{ fsc.db_user }}"
                                                    class="form-control" required/>
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('db-password') }}:
                                             <div class="input-group">
                                                 <span class="input-group-prepend">
@@ -219,7 +219,7 @@
                                         </div>
                                     </div>
                                     <div id="mysql_socket_div" class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('mysql-socket') }}:
                                             <input type="text" name="mysql_socket" class="form-control"
                                                    placeholder="{{ trans('optional') }}"/>
@@ -227,7 +227,7 @@
                                         </div>
                                     </div>
                                     <div id="pgsql_ssl_div" class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('pgsql-ssl-mode') }}:
                                             <select name="pgsql_ssl_mode" class="form-control">
                                                 <option value="" selected>------</option>
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="row align-items-center">
                                     <div id="pgsql_endpoint" class="col-sm-4">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             {{ trans('pgsql-endpoint') }}:
                                             <input type="text" name="pgsql_endpoint" class="form-control"
                                                    placeholder="{{ trans('optional') }}"/>
@@ -270,7 +270,7 @@
                             <div role="tabpanel" class="tab-pane" id="licencia">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <div class="form-group">
+                                        <div class="mb-3">
                                             <pre>{{ license }}</pre>
                                         </div>
                                     </div>
@@ -286,7 +286,7 @@
                             </div>
                             <div class="col-sm-auto">
                                 <button type="submit" class="btn btn-primary">
-                                    <i class="fas fa-check mr-1" aria-hidden="true"></i> {{ trans('accept') }}
+                                    <i class="fas fa-check me-1" aria-hidden="true"></i> {{ trans('accept') }}
                                 </button>
                             </div>
                         </div>
