--- a/Core/View/Login/TwoFactor.html.twig
+++ b/Core/View/Login/TwoFactor.html.twig
@@ -16,12 +16,10 @@
                         </a>
                         <div class="card-body">
                             <p class="card-text text-center">Ingrese el codigo TOTP</p>
-                            <div class="form-group">
+                            <div class="mb-3">
                                 <div class="input-group">
-                                    <span class="input-group-prepend">
-                                        <span class="input-group-text">
+                                    <span class="input-group-text">
                                             <i class="fas fa-user fa-fw" aria-hidden="true"></i>
-                                        </span>
                                     </span>
                                     <input type="text" name="fsCode" class="form-control" maxlength="50"
                                            placeholder="{{ trans('code') }}" required autocomplete="off"
@@ -38,7 +36,7 @@
                                 No dude en consultar la web oficial o las cuentas de facebook, twitter o youtube.
                             </p>
                             <a href="https://facturascripts.com" rel="nofollow" class="btn btn-secondary">
-                                <i class="fas fa-question-circle mr-1"></i> facturascripts.com
+                                <i class="fas fa-question-circle me-1"></i> facturascripts.com
                             </a>
                             <a href="https://www.facebook.com/facturascripts/" rel="nofollow" class="btn btn-primary"
                                title="facebook"> <i class="fab fa-facebook"></i>
