--- a/Core/View/DocumentStitcher.html.twig
+++ b/Core/View/DocumentStitcher.html.twig
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="col mt-3">
                     {% for doc in fsc.documents %}
-                        <input type="hidden" name="code[]" value="{{ doc.primaryColumnValue() }}"/>
+                        <input type="hidden" name="codes[]" value="{{ doc.primaryColumnValue() }}"/>
                         {{ _self.documentCard(doc, fsc) }}
                     {% else %}
                         <div class="alert alert-dismissible alert-warning" role="alert">{{ trans('no-data') }}</div>
